--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JS Fundaments</title>
-    <script src="scripts.js" charset="utf-8" defer></script>
+    <link href="css/styles.css" rel="stylesheet" />
+    <script src="scripts.js" charset="utf-8" defer></script>  
   </head>
   <body>
 
